# cuda-helper

./: .gitignore  CMakeLists-hip.txt  CMakeLists.txt  README.md  check.sh  checkout-hip.sh
include/cuda-helper/: cuda-common.h  cuda-helper.h
src/: cuda_common.cpp
test/: find.cpp  find.cu  global_variable.h.prehip
